@@ -2,6 +2,8 @@ sunuo (0.1.7) unstable; urgency=low
 
   * wait for send transfers to be finished before killing the connection
     in NetState.Dispose()
+  * added test program "UOGQuery" which queries the UOGateway status of a
+    freeshard
 
  --
 
